force-app/main/default/objects/sf_scm__Notification__c/fields/sf_scm__DataId__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__DataId__c</fullName>
    <label>DataId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>