force-app/main/default/objects/sf_scm__Notification__c/fields/sf_scm__Secondary_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Secondary_Data_Id__c</fullName>
    <label>SecondaryDataId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>