force-app/main/default/objects/sf_scm__Notification__c/fields/sf_scm__SentAt__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__SentAt__c</fullName>
    <label>SentAt</label>
    <type>DateTime</type>
</CustomField>