force-app/main/default/objects/sf_scm__Notification__c/fields/sf_scm__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Status__c</fullName>
    <label>Status</label>
    <length>48</length>
    <required>true</required>
    <type>Text</type>
</CustomField>