force-app/main/default/objects/sf_scm__Notification__c/fields/sf_scm__Title__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>